# RaianBot

./: .gitignore  .pre-commit-config.yaml  README.md  bot_config.yml  config.py  data_migrator.py  mah_setting.py  main.py  migrate.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  feature.md
.github/workflows/: ruff.yml
app/: __init__.py  client.py  config.py  context.py  control.py  core.py  data.py  datetime.py  image.py  interrupt.py  logger.py  message.py  model.py  plugin.py  report.py  shortcut.py  statistic.py  utils.py
app/cos/: __init__.py  auth.py  config.py  request.py
app/database/: __init__.py  manager.py  model.py  service.py  types.py
assets/css/: footer.css
assets/data/: city.json  dialog_templates.json  draw_poetry.json  gacha_arknights.json  ill_templates.json
assets/data/alice/: ai.aiml  atomic.aiml  bot.aiml  bot_profile.aiml  default.aiml  pickup.aiml  primitive_math.aiml
assets/voice/: kokodayo.silk
cache/: basic_data.json
cache/{example_account}/: basic_data.json
config/: bot_config.yml  config.yml
config/bots/: {example_account}.yml
config/my_plugins/: admin.yml  aidraw.yml  dialog.yml  gacha.yml  img_search.yml  music.yml
config/plugins/: admin.yml  aidraw.yml  dialog.yml  gacha.yml  img_search.yml  music.yml  sign.yml  status.yml  weather.yml
data/: __init__.py  cache_data.json  model.py
data/plugins/: gachapool.json  recordpool.json  weibo_data.json
data/static/: gacha_arknights.json  ill_templates.json  random_operator_infomation.json
modules/: translate.py
modules/aiml/: aiml_parser.py  entry.py  lang_support.py  test.aiml  word_sub.py
modules/arknights/: __init__.py  example_gacha.json  example_recruiment.json  gacha.py  operator_template.json  random.py  randomo.py  recruiment.py
modules/arknights/resource/: careers.json
modules/dice/: cards.py  dices.py  investigator.py  messages.py  rd.py
modules/gacha/: __init__.py  arknights.py
modules/weibo/: __init__.py  main.py  model.py  storage.py
modules/weibo_old/: main.py  storage.py
plugins/: aidraw.py  api.py  closure_talk.py  coc.py  code_exec.py  control.py  debug.py  dialog.py  draw.py  friend.py  gacha.py  genshin_characard.py  gobang.py  greet.py  guess_operator.py  help.py  ill.py  img_search.py  jpttl.py  jptts.py  learn_repeat.py  lifecycle.py  music.py  nudge.py  query_operator.py  query_record.py  random_operator.py  recruitment.py  role.py  roll.py  setu.py  sign.py  status.py  t2i.py  uegov_draw.py  weather.py  wecd.py  weibo_fetch.py
plugins/admin/: __init__.py  announcement.py  control.py  debug.py  event.py  exception.py  flash.py  group.py  main.py  member.py  model.py  mute.py  request.py  start.py
plugins/closure_talk/: main.py
plugins/coc/: main.py  model.py
plugins/code/: filter.py  main.py
plugins/config/: admin.py  aidraw.py  dialog.py  gacha.py  img_search.py  music.py  sign.py
plugins/dialog/: config.py  main.py
plugins/draw/: main.py  model.py
plugins/gacha/: config.py  main.py  model.py
plugins/greet/: main.py
plugins/guess_operator/: main.py
plugins/help/: main.py
plugins/ill/: main.py
plugins/learn_repeat/: main.py  model.py
plugins/marry/: main.py
plugins/music/: config.py  main.py
plugins/nudge/: main.py
plugins/query_operator/: main.py
plugins/query_record/: main.py
plugins/random_operator/: main.py
plugins/recruitment/: main.py
plugins/sign/: config.py  main.py  model.py
plugins/sk_autosign/: main.py  model.py  request.py
plugins/status/: config.py  data.py  helpers.py  main.py
plugins/weather/: config.py  main.py
plugins/weibo/: main.py  model.py
plugins_old/: aidraw.py  api.py  code_exec.py  draw.py  gacha.py  help.py  img_search.py  learn_repeat.py  music.py  nudge.py  query_operator.py  query_record.py  random_operator.py  recruitment.py  setu.py  skland_sign.py  status.py  weather.py  wecd.py
plugins_old/admin/: __init__.py  announcement.py  flash.py  group.py  request.py
plugins_old/config/: admin.py  aidraw.py  dialog.py  img_search.py
utils/: control.py  exception_report.py  generate_img.py  simple_permission.py
