[project]
name = "raian-bot"
version = "1.0.0"
description = ""
authors = [
    {name = "RF-Tar-Railt",email = "3165388245@qq.com"},
]
dependencies = [
    "arclet-alconna-avilla>=0.16.2",
    "avilla-qqapi>=1.0.0a11",
    "graia-saya>=0.0.19",
    "graia-scheduler>=0.3.0",
    "pyquery>=2.0.0",
    "pydantic<2.0.0",
    "PyYAML>=6.0.1",
    "tencentcloud-sdk-python>=3.0.1023",
    "graiax-playwright>=0.3.1",
    "graiax-text2img-playwright>=0.4.2",
    "diro-py>=0.1.1",
    "arknights-toolkit>=0.6.2",
    "graiax-fastapi>=0.4.1",
    "avilla-elizabeth>=1.0.0a10",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "AGPL-3.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ['py39']
