[project]
name = "raian-bot"
version = "1.0.0"
description = ""
authors = [
    {name = "RF-Tar-Railt",email = "3165388245@qq.com"},
]
dependencies = [
    "arclet-alconna>=1.8.6",
    "graia-amnesia[aiohttp,asgi]>=0.9.0",
    "avilla-core>=1.0.0a25",
    "arclet-alconna-avilla>=0.18.0",
    "avilla-qqapi>=1.0.0a28",
    "avilla-elizabeth>=1.0.0a29",
    "graia-saya>=0.0.19",
    "graia-scheduler>=0.3.1",
    "pyquery>=2.0.0",
    "pydantic>=2.6.4",
    "PyYAML>=6.0.1",
    "graiax-playwright>=0.3.1",
    "graiax-text2img-playwright>=0.4.3",
    "diro-py>=0.1.1",
    "arknights-toolkit>=0.6.4",
    "graiax-fastapi>=0.4.1",
    "ujson>=5.9.0",
    "sqlalchemy>=2.0.29",
    "aiosqlite>=0.20.0",
    "Jinja2>=3.1.3",
    "psutil>=5.9.8",
    "humanize>=4.9.0",
    "qrcode>=7.4.2",
    "tzdata>=2024.1",
    "PyJWT>=2.8.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "AGPL-3.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
force_sort_within_sections = false
extra_standard_library = ["typing_extensions"]

[tool.ruff]
include = ["app/**.py", "plugins/**.py", "library/**.py", "./main.py"]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E731", "E402"]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "basic"

[tool.pdm.scripts]
format = { composite = ["isort ./main.py ./app/ ./plugins/ ./library","black ./main.py ./app/ ./plugins/ ./library","ruff check ./main.py ./app/ ./plugins/ ./library"] }

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.13.2",
    "black>=24.3.0",
    "ruff>=0.3.4",
    "fix-future-annotations>=0.5.0",
]
